[package]
name = "disastle-castle-rust"
version = "0.1.0"
authors = ["Hieu Nguyen <nthieu173@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
ron = "0.7"